feat(api): added new endpoint /api/v3.2/meta
